clean up wording and spacing of Usage

--- a/Usage.ipynb
+++ b/Usage.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## Histograms\n",
     "\n",
-    "`matplotlib` doesn't do well with overlapping histograms, as the bins don't line up by default. This functions is addresses that."
+    "`matplotlib` doesn't do well with overlapping histograms, as the bins don't line up by default. This function addresses that."
    ]
   },
   {
@@ -28,9 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x1 = stats.norm(0,1).rvs(100000)\n",
-    "x2 = stats.norm(3,2).rvs(50000)\n",
-    "x3 = stats.norm(5,1.5).rvs(50000)"
+    "x1 = stats.norm(0, 1).rvs(100000)\n",
+    "x2 = stats.norm(3, 2).rvs(50000)\n",
+    "x3 = stats.norm(5, 1.5).rvs(50000)"
    ]
   },
   {
@@ -52,7 +52,11 @@
     }
    ],
    "source": [
-    "tools.multihist([x1, x2, x3], density=True, bins=30, xmin=None, xmax=None)\n",
+    "tools.multihist([x1, x2, x3],\n",
+    "                density=True,\n",
+    "                bins=30,\n",
+    "                xmin=None,\n",
+    "                xmax=None)\n",
     "plt.savefig('images/multihist.png')"
    ]
   },
@@ -70,7 +74,9 @@
    "outputs": [],
    "source": [
     "x = np.concatenate([x1, x2, x3])\n",
-    "y = np.array((['N(0, 1)']*100000 + ['N(3, 2)']*50000 + ['N(5, 1.5)']*50000))"
+    "y = np.array((['N(0, 1)'] * 100000 +\n",
+    "              ['N(3, 2)'] * 50000 +\n",
+    "              ['N(5, 1.5)'] * 50000))"
    ]
   },
   {
@@ -223,9 +229,9 @@
    "source": [
     "The confusion matrix has three different options for how to normalize the size of the squares. In the default (`normalization='maximum'`), the size of the squares is proportional to the number of samples among all the possible combinations, scaled so that the square corresponding to the largest number fills an entire space in the grid.\n",
     "\n",
-    "For `'precision'` or `'prediction`', the numbers are scaled separately within each column, so total sizes of all the squares for a single prediction would fill a grid space. In this case, the size of the square (relative to the grid space) represents the precision of for that combination.\n",
+    "For `'precision'` or `'prediction`', the numbers are scaled separately within each predicted label (column by default), so the total sizes of all the squares for a single prediction would fill a grid space. In this case, the size of the square (relative to the grid space) represents the precision for that combination.\n",
     "\n",
-    "For `'recall'` or `'true`', the numbers are scaled separately within each row, so total sizes of all the squares for a single true value would fill a grid space. In this case, the size of the square (relative to the grid space) represents the recall of for that combination."
+    "For `'recall'` or `'true`', the numbers are scaled separately within each true label (row by default), so total sizes of all the squares for a single true value would fill a grid space. In this case, the size of the square (relative to the grid space) represents the recall for that combination."
    ]
   },
   {
@@ -234,8 +240,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_true = [0,0,0,0,1,1,1,1,1,2,2,2]\n",
-    "y_pred = [0,0,0,1,1,1,1,0,0,2,1,0]"
+    "y_true = [0, 0, 0, 0, 1, 1, 1, 1, 1, 2, 2, 2]\n",
+    "y_pred = [0, 0, 0, 1, 1, 1, 1, 0, 0, 2, 1, 0]"
    ]
   },
   {
@@ -272,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default the confusion matrices have prediction along the horizontal axis and the true values along the vertical (transposed from the `sklearn` standard). That can be switched with `transpose=False`."
+    "By default the confusion matrices have the predictions along the horizontal axis and the true values along the vertical (transposed from the `sklearn` standard). That can be switched with `transpose=False`."
    ]
   },
   {
@@ -377,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
