add aligm parameter to multihist

--- a/Usage.ipynb
+++ b/Usage.ipynb
@@ -105,7 +105,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It can take most of the expected arguments, including `figsize`, `color`, and `alpha`."
+    "It can take most of the expected arguments, including `figsize`, `color`, and `alpha`.\n",
+    "\n",
+    "Setting the parameter `align=True` will force bin boundaries to line up on multiples of powers of ten times 1, 2, or 5, matching the number of `bins` as closely as possible."
    ]
   },
   {
